heimdall-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heimdall
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /heimdall
          backend:
            serviceName: heimdall
            servicePort: 80
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
